trying to fix the shifting sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ input.button {
 
 /* sidebar */
 #sidebar {
-	position: relative;
+	position: absolute;
 	float: left;
 	width: 190px;
 	margin: 0 0 10px 0;
